[package]
name = "wasm-webgl-demo"
version = "0.1.0"
authors = ["Nikolai Brendler <nbrendler@gmail.com>"]
edition = "2018"

[lib]
name = "wasmlib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gameharness"
path = "src/bin.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]

image = "0.23.8"
luminance = "0.41"
luminance-derive = "0.6.1"
luminance-front = "0.2.3"
luminance-windowing = "0.9.1"
wasm-bindgen-test = "0.3.13"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
luminance-webgl = "0.1.2"
luminance-web-sys = "0.1.1"
nalgebra = "0.22"

[dependencies.web-sys]
version = "0.3.44"
features = [
  "console",
  "MouseEvent",
  "KeyboardEvent",
  "Window",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "*"
luminance-glfw = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies.legion]
path = "../legion"
default-features = false
features = [ "wasm-bindgen", "codegen" ]

[target.'cfg(target_arch = "wasm32")'.dependencies.rapier2d]
version = "0.1.3"
features = [ "wasm-bindgen" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
