[package]
name = "voidstar"
version = "0.1.0"
authors = ["Nikolai Brendler <nbrendler@gmail.com>"]
edition = "2018"

[lib]
name = "voidstar_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "voidstar-bin"
path = "src/bin.rs"

[features]
default = ["native"]
wasm = [
  "legion/wasm-bindgen",
  "instant/wasm-bindgen",
  "rapier2d/wasm-bindgen",
  "console_error_panic_hook",
  "console_log",
  "luminance-webgl",
  "luminance-web-sys",
  "web-sys",
  "wasm-bindgen",
  "wasm-bindgen-test"
]
native = ["glfw", "luminance-glfw", "env_logger"]

[dependencies]

image = "0.23.8"
luminance = "0.41"
luminance-derive = "0.6.1"
luminance-front = "0.2.3"
luminance-windowing = "0.9.1"
nalgebra = "0.22"
rapier2d = "0.1.3"
log = "0.4.11"
instant = "*"
bitflags = "*"
# WASM-only
wasm-bindgen-test = { version = "0.3.13", optional = true }
wasm-bindgen = { version = "0.2.63", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
luminance-webgl = { version = "0.1.2", optional = true }
luminance-web-sys = { version = "0.1.1", optional = true }
console_log = { version = "*", optional = true }
# Native-only
glfw = { version = "*", optional = true }
luminance-glfw = { version = "*", optional = true }
env_logger = {version = "*", optional = true }

[dependencies.web-sys]
version = "0.3.44"
features = [
  "console",
  "MouseEvent",
  "KeyboardEvent",
  "Window",
]
optional = true

[dependencies.legion]
path = "../legion"
default-features = false
features = [ "codegen" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
